2014-06-12  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nptl/Makefile: Move tst-timer bits to ...
	* sysdeps/pthread/Makefile: ... here, new file.

	* nptl/sysdeps/unix/sysv/linux/Implies: Moved ...
	* sysdeps/nptl/Implies: ... here.
	* sysdeps/unix/sysv/linux/Implies: Add nptl.
	* nptl/sysdeps/pthread/list.h: Moved ...
	* include/list.h: ... here.
	* nptl/sysdeps/pthread/createthread.c: Moved ...
	* nptl/createthread.c: ... here.
	* nptl/sysdeps/unix/sysv/linux/createthread.c: Update #include.
	* nptl/sysdeps/pthread/pt-longjmp.c: Moved ...
	* nptl/pt-longjmp.c: ... here.
	* nptl/sysdeps/pthread/Makefile: Moved ...
	* sysdeps/nptl/Makefile: ... here.
	* nptl/sysdeps/pthread/Subdirs: Moved ...
	* sysdeps/nptl/Subdirs: ... here.
	* nptl/sysdeps/pthread/aio_misc.h: Moved ...
	* sysdeps/nptl/aio_misc.h: ... here.
	* nptl/sysdeps/pthread/bits/libc-lock.h: Moved ...
	* sysdeps/nptl/bits/libc-lock.h: ... here.
	* nptl/sysdeps/pthread/bits/libc-lockP.h: Moved ...
	* sysdeps/nptl/bits/libc-lockP.h: ... here.
	* nptl/sysdeps/pthread/bits/stdio-lock.h: Moved ...
	* sysdeps/nptl/bits/stdio-lock.h: ... here.
	* nptl/sysdeps/pthread/configure: Moved ...
	* sysdeps/nptl/configure: ... here.
	* nptl/sysdeps/pthread/configure.ac: Moved ...
	* sysdeps/nptl/configure.ac: ... here.
	* nptl/sysdeps/pthread/gai_misc.h: Moved ...
	* sysdeps/nptl/gai_misc.h: ... here.
	* nptl/sysdeps/pthread/librt-cancellation.c: Moved ...
	* sysdeps/nptl/librt-cancellation.c: ... here.
	* nptl/sysdeps/pthread/malloc-machine.h: Moved ...
	* sysdeps/nptl/malloc-machine.h: ... here.
	* nptl/sysdeps/pthread/pthread-functions.h: Moved ...
	* sysdeps/nptl/pthread-functions.h: ... here.
	* nptl/sysdeps/pthread/pthread.h: Moved ...
	* sysdeps/nptl/pthread.h: ... here.
	* nptl/sysdeps/pthread/setxid.h: Moved ...
	* sysdeps/nptl/setxid.h: ... here.
	* nptl/sysdeps/pthread/sigfillset.c: Moved ...
	* sysdeps/nptl/sigfillset.c: ... here.
	* nptl/sysdeps/pthread/tcb-offsets.h: Moved ...